# mausberry-switch-libgpiod

./: .gitignore  README.md  configure.ac  nfpm.yaml
.github/workflows/: app.yml
data/: mausberry-switch.service
src/: Makefile.am  main.c
tests/: Makefile.am  test_maus.c
